--- a/Blackjack.ipynb
+++ b/Blackjack.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "V5XbX-xUZeLr"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -60,12 +60,12 @@
       "metadata": {
         "id": "L-BTPN_sBXJ_"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vmw52ONUQ8ku"
       },
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "Sna1wkWjaCgS"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
       "metadata": {
         "id": "F9Q4BocWb2ga"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -329,10 +329,27 @@
         "main()"
       ],
       "metadata": {
-        "id": "y0tyW9JDE8Mc"
+        "id": "y0tyW9JDE8Mc",
+        "outputId": "0a7a9cb0-4701-4573-b57c-c056de71f28b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Round  2  Credit :  450 Bet :  100 \n",
+            "your hand :  [10, 10]  Your score : 20 \n",
+            "Dealer's first card :  6\n",
+            "Dealer's final hand : [6, 9, 10] Dealer's score : 25\n",
+            "Blackjack! You win! 450 remaining.Play again?(y/n) : n\n",
+            "Quit?(y/n) :y\n"
+          ]
+        }
+      ]
     }
   ]
 }
